Restore mobile 360 background with scrolling fixed and shifted starting angle

--- a/src/index.css
+++ b/src/index.css
@@ -943,7 +943,8 @@ footer p {
     min-height: 100vh;
   }
   #bg {
-    display: none;
+    pointer-events: none;
+    display: block;
   }
   .hero-content-bottom {
     margin-bottom: 60px;
